# h5

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml
c++/h5/: CMakeLists.txt  array_interface.cpp  array_interface.hpp  complex.hpp  file.cpp  file.hpp  format.cpp  format.hpp  generic.hpp  group.cpp  group.hpp  h5.hpp  macros.hpp  object.cpp  object.hpp  scalar.hpp  serialization.hpp  utils.hpp
c++/h5/stl/: array.hpp  map.hpp  optional.hpp  pair.hpp  string.cpp  string.hpp  tuple.hpp  variant.hpp  vector.cpp  vector.hpp
doc/: ChangeLog.md  Doxyfile.in  DoxygenLayout.xml  documentation.md  ex1.md  ex2.md  ex3.md  examples.md  groups.dox  installation.md  integration.md  issues.md  overview.md.in
python/h5/: CMakeLists.txt  h5py_io.cpp
share/cmake/: h5-config.cmake.in
test/c++/: CMakeLists.txt  h5_array.cpp  h5_array_interface.cpp  h5_complex.cpp  h5_file.cpp  h5_group.cpp  h5_map.cpp  h5_memory_file.cpp  h5_optional.cpp  h5_pair.cpp  h5_serialize.cpp  h5_string.cpp  h5_tuple.cpp  h5_variant.cpp  h5_vector.cpp
